added new way to build tableview with blur effect

--- a/Calanques/Base.lproj/Main.storyboard
+++ b/Calanques/Base.lproj/Main.storyboard
@@ -17,14 +17,139 @@
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="port pin" translatesAutoresizingMaskIntoConstraints="NO" id="fym-eW-6gz">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iPs-aA-kHN">
+                                <rect key="frame" x="0.0" y="2" width="375" height="665"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Ue1-jg-Hv4">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="665"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JmH-Sn-sUZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="665"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="Z6L-T6-IdP">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="665"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            </view>
+                                            <vibrancyEffect>
+                                                <blurEffect style="light"/>
+                                            </vibrancyEffect>
+                                        </visualEffectView>
+                                    </subviews>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Come here!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNM-af-9Ha">
+                                <rect key="frame" x="10" y="30" width="355" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="GDu-F5-9rM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MJ7-1X-DCr">
+                                <rect key="frame" x="10" y="68" width="355" height="540"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="alternative" rowHeight="200" id="qGH-Fh-28F" customClass="CalanqueCellAlternative" customModule="Calanques" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="355" height="200"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qGH-Fh-28F" id="CJZ-Qe-Rgc">
+                                            <rect key="frame" x="0.0" y="0.0" width="355" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="callelongue" translatesAutoresizingMaskIntoConstraints="NO" id="8M5-HJ-cTT">
+                                                    <rect key="frame" x="0.0" y="2" width="355" height="195"/>
+                                                </imageView>
+                                                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BqI-Jj-QSA">
+                                                    <rect key="frame" x="0.0" y="137" width="355" height="60"/>
+                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="eos-r5-tFy">
+                                                        <rect key="frame" x="0.0" y="0.0" width="355" height="60"/>
+                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                        <subviews>
+                                                            <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mPL-06-C3R">
+                                                                <rect key="frame" x="0.0" y="0.0" width="355" height="60"/>
+                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="tRd-8e-q7O">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="355" height="60"/>
+                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                </view>
+                                                                <vibrancyEffect>
+                                                                    <blurEffect style="light"/>
+                                                                </vibrancyEffect>
+                                                            </visualEffectView>
+                                                        </subviews>
+                                                    </view>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="ZZu-JU-aeG"/>
+                                                    </constraints>
+                                                    <blurEffect style="light"/>
+                                                </visualEffectView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="1YH-zO-4o5">
+                                                    <rect key="frame" x="0.0" y="137" width="355" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="Jat-Fe-WWl"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="BqI-Jj-QSA" secondAttribute="trailing" id="0PI-Ys-c39"/>
+                                                <constraint firstItem="BqI-Jj-QSA" firstAttribute="leading" secondItem="CJZ-Qe-Rgc" secondAttribute="leading" id="8FQ-a5-9hw"/>
+                                                <constraint firstItem="8M5-HJ-cTT" firstAttribute="leading" secondItem="CJZ-Qe-Rgc" secondAttribute="leading" id="GG6-Ij-RVv"/>
+                                                <constraint firstItem="1YH-zO-4o5" firstAttribute="leading" secondItem="CJZ-Qe-Rgc" secondAttribute="leading" id="GyW-KF-fFW"/>
+                                                <constraint firstAttribute="trailing" secondItem="1YH-zO-4o5" secondAttribute="trailing" id="LMY-71-EVu"/>
+                                                <constraint firstAttribute="bottom" secondItem="1YH-zO-4o5" secondAttribute="bottom" constant="3" id="LmY-gd-0VA"/>
+                                                <constraint firstItem="8M5-HJ-cTT" firstAttribute="top" secondItem="CJZ-Qe-Rgc" secondAttribute="top" constant="2" id="NEH-6c-c5Y"/>
+                                                <constraint firstAttribute="bottom" secondItem="8M5-HJ-cTT" secondAttribute="bottom" constant="3" id="T4W-ER-8TI"/>
+                                                <constraint firstAttribute="bottom" secondItem="BqI-Jj-QSA" secondAttribute="bottom" constant="3" id="XWc-SA-Vfx"/>
+                                                <constraint firstAttribute="trailing" secondItem="8M5-HJ-cTT" secondAttribute="trailing" id="gsQ-g1-FVj"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="calanqueImage" destination="8M5-HJ-cTT" id="Gjb-h6-azz"/>
+                                            <outlet property="calanqueLabel" destination="1YH-zO-4o5" id="mH8-0h-3Yk"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="fym-eW-6gz" firstAttribute="trailing" secondItem="PQr-Ze-W5v" secondAttribute="trailing" id="3mJ-vO-qOW"/>
+                            <constraint firstItem="fym-eW-6gz" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" id="8wu-TD-RWs"/>
+                            <constraint firstItem="iPs-aA-kHN" firstAttribute="top" secondItem="tsR-hK-woN" secondAttribute="top" constant="2" id="AIw-LN-sDf"/>
+                            <constraint firstItem="MJ7-1X-DCr" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="10" id="Bx3-HE-frQ"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="MJ7-1X-DCr" secondAttribute="trailing" constant="10" id="J2l-xP-30y"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="MJ7-1X-DCr" secondAttribute="bottom" constant="10" id="KOC-va-cQS"/>
+                            <constraint firstItem="fym-eW-6gz" firstAttribute="top" secondItem="tsR-hK-woN" secondAttribute="top" id="YdM-Am-XYW"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="CNM-af-9Ha" secondAttribute="trailing" constant="10" id="dpE-Zb-bmw"/>
+                            <constraint firstItem="iPs-aA-kHN" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="hF5-X9-Vw1"/>
+                            <constraint firstItem="CNM-af-9Ha" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="10" id="iKh-AC-Mgv"/>
+                            <constraint firstItem="CNM-af-9Ha" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="10" id="lxd-TQ-rlg"/>
+                            <constraint firstAttribute="bottom" secondItem="iPs-aA-kHN" secondAttribute="bottom" id="muk-35-Exq"/>
+                            <constraint firstItem="iPs-aA-kHN" firstAttribute="trailing" secondItem="PQr-Ze-W5v" secondAttribute="trailing" id="pQm-Qs-dg7"/>
+                            <constraint firstItem="MJ7-1X-DCr" firstAttribute="top" secondItem="CNM-af-9Ha" secondAttribute="bottom" constant="8" id="prV-1m-xb1"/>
+                            <constraint firstAttribute="bottom" secondItem="fym-eW-6gz" secondAttribute="bottom" id="vjb-ig-TgL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Table View 1" image="list" id="acW-dT-cKf"/>
+                    <connections>
+                        <outlet property="tableView" destination="MJ7-1X-DCr" id="xWi-a8-mca"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="-789"/>
+            <point key="canvasLocation" x="749.60000000000002" y="-789.35532233883066"/>
         </scene>
         <!--Table view 2-->
         <scene sceneID="dyW-66-duF">
@@ -141,7 +266,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="callelongue" width="329.14285278320312" height="219.29142761230469"/>
         <image name="earth" width="25.600000381469727" height="25.600000381469727"/>
         <image name="list" width="25.600000381469727" height="25.600000381469727"/>
+        <image name="port pin" width="245.75999450683594" height="164.16000366210938"/>
     </resources>
 </document>
