--- a/Calanques/Base.lproj/Main.storyboard
+++ b/Calanques/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View 1-->
+        <!--Table View Controller-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
                 <viewController id="9pv-A4-QxB" customClass="TableViewController" customModule="Calanques" customModuleProvider="target" sceneMemberID="viewController">
@@ -43,7 +43,7 @@
                                 <blurEffect style="light"/>
                             </visualEffectView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Come here!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNM-af-9Ha">
-                                <rect key="frame" x="10" y="30" width="355" height="30"/>
+                                <rect key="frame" x="10" y="74" width="355" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="GDu-F5-9rM"/>
                                 </constraints>
@@ -52,7 +52,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MJ7-1X-DCr">
-                                <rect key="frame" x="10" y="68" width="355" height="540"/>
+                                <rect key="frame" x="10" y="112" width="355" height="496"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="alternative" rowHeight="200" id="qGH-Fh-28F" customClass="CalanqueCellAlternative" customModule="Calanques" customModuleProvider="target">
@@ -142,16 +142,17 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Table View 1" image="list" id="acW-dT-cKf"/>
+                    <navigationItem key="navigationItem" id="OAU-Tn-IgW"/>
                     <connections>
                         <outlet property="tableView" destination="MJ7-1X-DCr" id="xWi-a8-mca"/>
+                        <segue destination="uYx-T8-VrO" kind="show" identifier="detail" id="Yo6-4P-y8v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.60000000000002" y="-789.35532233883066"/>
+            <point key="canvasLocation" x="1688.8" y="-789.35532233883066"/>
         </scene>
-        <!--Table view 2-->
+        <!--True Table View Controller-->
         <scene sceneID="dyW-66-duF">
             <objects>
                 <tableViewController id="ri0-Dp-AJa" customClass="TrueTableViewController" customModule="Calanques" customModuleProvider="target" sceneMemberID="viewController">
@@ -223,13 +224,59 @@
                             <outlet property="delegate" destination="ri0-Dp-AJa" id="Mp3-o4-rji"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Table view 2" image="list" id="JXG-TL-ID6"/>
+                    <navigationItem key="navigationItem" id="rBF-rd-sCc"/>
+                    <connections>
+                        <segue destination="uYx-T8-VrO" kind="show" identifier="detail" id="uKJ-n8-aCz"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Erj-Cl-YC5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="749.60000000000002" y="-0.44977511244377816"/>
+            <point key="canvasLocation" x="1688.8" y="-0.44977511244377816"/>
         </scene>
-        <!--Map-->
+        <!--Detail Controller-->
+        <scene sceneID="gvK-yO-iQg">
+            <objects>
+                <viewController id="uYx-T8-VrO" customClass="DetailController" customModule="Calanques" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Y1h-dy-Iwv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Onz-Zu-5pA" customClass="RoundedImage" customModule="Calanques" customModuleProvider="target">
+                                <rect key="frame" x="87.5" y="74" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="9yV-hy-Wrb"/>
+                                    <constraint firstAttribute="width" constant="200" id="x1e-06-zRk"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3fA-Z9-IPS">
+                                <rect key="frame" x="16" y="294" width="343" height="314"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="3fA-Z9-IPS" firstAttribute="leading" secondItem="0mg-J2-a8w" secondAttribute="leading" constant="16" id="4dm-1p-gPg"/>
+                            <constraint firstItem="Onz-Zu-5pA" firstAttribute="centerX" secondItem="Y1h-dy-Iwv" secondAttribute="centerX" id="LBJ-nn-dNf"/>
+                            <constraint firstItem="0mg-J2-a8w" firstAttribute="bottom" secondItem="3fA-Z9-IPS" secondAttribute="bottom" constant="10" id="UxZ-8F-qBr"/>
+                            <constraint firstItem="0mg-J2-a8w" firstAttribute="trailing" secondItem="3fA-Z9-IPS" secondAttribute="trailing" constant="16" id="gfU-5e-WYj"/>
+                            <constraint firstItem="3fA-Z9-IPS" firstAttribute="top" secondItem="Onz-Zu-5pA" secondAttribute="bottom" constant="20" id="ivE-4y-na6"/>
+                            <constraint firstItem="Onz-Zu-5pA" firstAttribute="top" secondItem="0mg-J2-a8w" secondAttribute="top" constant="10" id="tbb-h0-mjj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0mg-J2-a8w"/>
+                    </view>
+                    <connections>
+                        <outlet property="calanqueDesc" destination="3fA-Z9-IPS" id="xQe-fT-KhY"/>
+                        <outlet property="calanqueImage" destination="Onz-Zu-5pA" id="LQr-FM-zkH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I3i-sh-B1e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2816.8000000000002" y="-0.44977511244377816"/>
+        </scene>
+        <!--Map Controller-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
                 <viewController id="8rJ-Kc-sve" customClass="MapController" customModule="Calanques" customModuleProvider="target" sceneMemberID="viewController">
@@ -239,11 +286,11 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Map" image="earth" id="cPa-gy-q4n"/>
+                    <navigationItem key="navigationItem" id="oMN-I5-fev"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="810"/>
+            <point key="canvasLocation" x="1688.8" y="809.14542728635683"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -255,14 +302,71 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
-                        <segue destination="ri0-Dp-AJa" kind="relationship" relationship="viewControllers" id="NWx-DA-CyN"/>
-                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
+                        <segue destination="Oos-pa-vtz" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
+                        <segue destination="10h-WX-5Yl" kind="relationship" relationship="viewControllers" id="NWx-DA-CyN"/>
+                        <segue destination="Pyj-XX-TfQ" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-271" y="0.0"/>
+        </scene>
+        <!--Table View 1-->
+        <scene sceneID="xlz-hX-BkH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Oos-pa-vtz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Table View 1" image="list" id="acW-dT-cKf"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="AnU-Wy-znx">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="rootViewController" id="O1D-bl-I9e"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rBP-ey-aLC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="749.60000000000002" y="-789.35532233883066"/>
+        </scene>
+        <!--Table view 2-->
+        <scene sceneID="mzS-SC-MCu">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="10h-WX-5Yl" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Table view 2" image="list" id="JXG-TL-ID6"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dno-9b-6kc">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ri0-Dp-AJa" kind="relationship" relationship="rootViewController" id="PA8-fH-Sjg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aQn-Hg-OyP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="749.60000000000002" y="-0.44977511244377816"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="e6R-gh-frq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Pyj-XX-TfQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Map" image="earth" id="cPa-gy-q4n"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4d8-kS-Npl">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="rootViewController" id="4qj-k6-lZa"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Nu-Dx-WWp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="749.60000000000002" y="809.14542728635683"/>
         </scene>
     </scenes>
     <resources>
@@ -271,4 +375,7 @@
         <image name="list" width="25.600000381469727" height="25.600000381469727"/>
         <image name="port pin" width="245.75999450683594" height="164.16000366210938"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="uKJ-n8-aCz"/>
+    </inferredMetricsTieBreakers>
 </document>
